[package]
name = "web-bind"
version = "0.1.0"
authors = ["MK <MKennedy1983@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
graph-lib = { path = "../graph-lib" }
wasm-bindgen = "^0.2"
js-sys = "^0.3"
console_error_panic_hook = "^0.1"

[dependencies.web-sys]
version = "^0.3"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'console',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'HtmlButtonElement',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlInputElement',
    'HtmlSelectElement',
    'MouseEvent',
    'Node',
    'Performance',
    'TextMetrics',
    'Window',
]

[profile.release]
lto = true
codegen-units = 1
